# beyrl

./: CMakeLists.txt
examples/: CMakeLists.txt  main.cpp
examples/res/: frag.glsl  vert.glsl
examples/res/shaders/: frag.fs  frag.glsl  light.vs  vert.glsl
include/beyrl/: beyrl.hpp
include/beyrl/graphics/: camera.hpp  context.hpp  light.hpp  material.hpp  model.hpp  object.hpp  shader.hpp  texture.hpp  transform.hpp  vertex_layout.hpp  window.hpp
include/beyrl/math/: matrix.hpp  vector.hpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb/: CMakeLists.txt
src/graphics/: context.cpp  gl_context.hpp  model.cpp  objparser.cpp  objparser.hpp  shader.cpp  texture.cpp  window.cpp
